--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       crossorigin="anonymous"
     />
     <link href="style.css" rel="stylesheet" crossorigin="anonymous" />
+    <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
   </head>
   <body onload="initialise()">
     <div class="container">
@@ -280,11 +281,13 @@
                 getting the right amounts of each.
               </p>
             </div>
+            <div class="chart" id="bmiChart"></div>
           </div>
         </div>
       </div>
     </div>
     <script type="text/javascript" src="scripts/calculate.js"></script>
+    <script type="text/javascript" src="scripts/chart.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
