--- a/index.html
+++ b/index.html
@@ -327,12 +327,34 @@
               </button>
             </div>
           </div>
+          <div id="mealPlan" class="alert alert-dark mt-3"></div>
         </div>
         <div class="col">
-          <div id="mealPlan" class="alert alert-dark"></div>
+          <div class="alert alert-light">
+            <h2>What is a Carnivore Meal Planner?</h2>
+            <p>
+              A Carnivore Meal Planner is a handy tool that helps you plan
+              carnivore-friendly meals (only include animal-based foods). It
+              adjust your meals with your daily calories, and making it easier
+              to stick to a carnivore diet.
+            </p>
+          </div>
+          <div class="alert alert-light">
+            <h2>Carnivore Foods</h2>
+            <p>
+              The carnivore diet only includes animal-based foods and excludes
+              plants. Common options are: <b>Meats:</b> Beef (e.g., ribeye
+              steak, ground beef), pork (e.g., pork belly), lamb, and organ
+              meats like liver. <b>Poultry:</b> Chicken thighs, duck, and other
+              fowl. <b>Seafood:</b> Salmon, mackerel, sardines, oysters, shrimp,
+              and lobster. <b>Dairy:</b> Butter, cheddar cheese, and other
+              full-fat cheeses. <b>Eggs</b>.
+            </p>
+          </div>
         </div>
       </div>
     </div>
+
     <script type="text/javascript" src="scripts/calculate.js"></script>
     <script type="text/javascript" src="scripts/mealplan.js"></script>
     <script type="text/javascript" src="scripts/chart.js"></script>
