--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <a
                   class="nav-link"
                   href="https://app.gocarnivore.com/tools/meal-planner"
-                  >Meal Planner</a
+                  >Advanced Meal Planner</a
                 >
               </li>
             </ul>
