--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
       gtag("config", "G-KW8DYF9PV2");
     </script>
+    <!-- Google tag (gtag.js) -->
     <meta
       name="google-site-verification"
       content="E5dhEKTFEwyURojpAAMtZSwjpTRP5IHfYace4g0GyXs"
@@ -42,7 +43,6 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Carnivore Guide</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -57,6 +57,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
+                <a class="nav-link" href="/food-list.html">Carnivore Foods</a>
+              </li>
+              <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -64,7 +67,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Calculators
+                  Other Calculators
                 </a>
                 <ul class="dropdown-menu">
                   <li>
