--- a/index.html
+++ b/index.html
@@ -98,11 +98,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="https://app.gocarnivore.com/tools/meal-planner"
-                  >Advanced Meal Planner</a
-                >
+                <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
               </li>
             </ul>
           </div>
@@ -290,76 +286,7 @@
       </div>
     </div>
 
-    <div class="container mb-5">
-      <h1 class="my-4">Carnivore Meal Planner</h1>
-      <p>
-        This free Carnivore Meal Planner helps you stick to a carnivore diet,
-        focusing on animal-based foods. Enter your daily calorie goal and
-        preferred units to get a personalized meal plan with meats and optional
-        butter or cheese sides. It's a simple way to support your carnivore
-        lifestyle.
-      </p>
-      <div class="row gy-4">
-        <div class="col-md-6">
-          <div class="row">
-            <div class="col">
-              <div class="mb-3">
-                <label for="calories" class="form-label"
-                  >Total Daily Calories</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="calories"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="unit" class="form-label">Measuring Unit</label>
-                <select class="form-select" id="unit" required>
-                  <option value="grams">Grams</option>
-                  <option value="ounces">Ounces</option>
-                </select>
-              </div>
-              <button
-                id="plan-meals"
-                type="submit"
-                class="btn btn-primary w-100"
-              >
-                Generate Meal Plan
-              </button>
-            </div>
-          </div>
-          <div id="mealPlan" class="alert alert-dark mt-3"></div>
-        </div>
-        <div class="col">
-          <div class="alert alert-light">
-            <h2>What is a Carnivore Meal Planner?</h2>
-            <p>
-              A Carnivore Meal Planner is a handy tool that helps you plan
-              carnivore-friendly meals (only include animal-based foods). It
-              adjust your meals with your daily calories, and making it easier
-              to stick to a carnivore diet.
-            </p>
-          </div>
-          <div class="alert alert-light">
-            <h2>Carnivore Foods</h2>
-            <p>
-              The carnivore diet only includes animal-based foods and excludes
-              plants. Common options are: <b>Meats:</b> Beef (e.g., ribeye
-              steak, ground beef), pork (e.g., pork belly), lamb, and organ
-              meats like liver. <b>Poultry:</b> Chicken thighs, duck, and other
-              fowl. <b>Seafood:</b> Salmon, mackerel, sardines, oysters, shrimp,
-              and lobster. <b>Dairy:</b> Butter, cheddar cheese, and other
-              full-fat cheeses. <b>Eggs</b>.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <script type="text/javascript" src="scripts/calculate.js"></script>
-    <script type="text/javascript" src="scripts/mealplan.js"></script>
     <script type="text/javascript" src="scripts/chart.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
