--- a/food-list.html
+++ b/food-list.html
@@ -90,11 +90,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="https://app.gocarnivore.com/tools/meal-planner"
-                  >Advanced Meal Planner</a
-                >
+                <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
               </li>
             </ul>
           </div>
