--- a/meal-planner.html
+++ b/meal-planner.html
@@ -56,8 +56,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Carnivore Calculator</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link" href="/food-list.html">Carnivore Foods</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -67,16 +73,22 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Other Calculators
+                  Other Tools
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="/">Carnivore Calculator</a>
+                    <a
+                      class="dropdown-item"
+                      href="https://app.gocarnivore.com/tools/meal-planner"
+                      target="_blank"
+                      >Advanced Meal Planner</a
+                    >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
                       href="https://www.theprimal.com/carnivore-diet-macro-calculator"
+                      target="_blank"
                       >Primal Calculator</a
                     >
                   </li>
@@ -84,6 +96,7 @@
                     <a
                       class="dropdown-item"
                       href="https://app.gocarnivore.com/tools/carnivore-diet-macro-calculator"
+                      target="_blank"
                       >GoCarnivore Calculator</a
                     >
                   </li>
@@ -92,13 +105,11 @@
                     <a
                       class="dropdown-item"
                       href="https://app.gocarnivore.com/tools/sugar-calculator"
+                      target="_blank"
                       >Sugar Calculator</a
                     >
                   </li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
               </li>
             </ul>
           </div>
@@ -113,6 +124,14 @@
         butter or cheese sides. It's a simple way to support your carnivore
         lifestyle.
       </p>
+      <div class="alert alert-warning" role="alert">
+        <b>Disclaimer:</b> The results from this tool provide a general guide
+        and should not be taken as medical advice. Consult with a
+        <a href="https://app.gocarnivore.com/doctors" target="_blank"
+          >qualified healthcare professional</a
+        >
+        before making any significant lifestyle changes.
+      </div>
       <div class="row gy-4">
         <div class="col-md-6">
           <div class="row">
