--- a/food-list.html
+++ b/food-list.html
@@ -48,8 +48,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Carnivore Calculator</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link" href="/food-list.html">Carnivore Foods</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -59,16 +65,22 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Calculators
+                  Other Tools
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="/">Carnivore Calculator</a>
+                    <a
+                      class="dropdown-item"
+                      href="https://app.gocarnivore.com/tools/meal-planner"
+                      target="_blank"
+                      >Advanced Meal Planner</a
+                    >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
                       href="https://www.theprimal.com/carnivore-diet-macro-calculator"
+                      target="_blank"
                       >Primal Calculator</a
                     >
                   </li>
@@ -76,6 +88,7 @@
                     <a
                       class="dropdown-item"
                       href="https://app.gocarnivore.com/tools/carnivore-diet-macro-calculator"
+                      target="_blank"
                       >GoCarnivore Calculator</a
                     >
                   </li>
@@ -84,18 +97,17 @@
                     <a
                       class="dropdown-item"
                       href="https://app.gocarnivore.com/tools/sugar-calculator"
+                      target="_blank"
                       >Sugar Calculator</a
                     >
                   </li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
-              </li>
             </ul>
           </div>
         </div>
       </nav>
+
       <div class="mt-5">
         <h2 class="text-center mb-4">Carnivore Food List</h2>
         <div class="table-responsive">
