--- a/meal-planner.html
+++ b/meal-planner.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TDEE Calculator</title>
+    <title>Free Carnivore Meal Planner</title>
     <meta
       name="description"
-      content="Calculate your optimal protein and fat intake with our Carnivore Diet Calculator. Ensure you're meeting nutritional needs for a healthy carnivore lifestyle."
+      content="This free Carnivore meal planner helps you create personalized meal plans with the right protein-to-fat ratio, plus easy recipes and nutritional guidance."
     />
     <!-- Google tag (gtag.js) -->
     <script
