--- a/food-list.html
+++ b/food-list.html
@@ -30,6 +30,13 @@
       gtag("config", "G-KW8DYF9PV2");
     </script>
     <!-- Google tag (gtag.js) -->
+    <!-- ShareThis -->
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=67d28d8ca47a1e001adc636b&product=sop"
+      async="async"
+    ></script>
+    <!-- ShareThis -->
   </head>
   <body>
     <div class="container">
@@ -223,5 +230,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- ShareThis BEGIN -->
+    <div class="sharethis-inline-share-buttons"></div>
+    <!-- ShareThis END -->
   </body>
 </html>
