--- a/meal-planner.html
+++ b/meal-planner.html
@@ -38,6 +38,13 @@
     />
     <link href="style.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+    <!-- ShareThis -->
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=67d28d8ca47a1e001adc636b&product=sop"
+      async="async"
+    ></script>
+    <!-- ShareThis -->
   </head>
   <body>
     <div class="container">
@@ -197,5 +204,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- ShareThis BEGIN -->
+    <div class="sharethis-inline-share-buttons"></div>
+    <!-- ShareThis END -->
   </body>
 </html>
