--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
               <li class="nav-item">
                 <a class="nav-link" href="/">Carnivore Calculator</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
                 <a class="nav-link" href="/food-list.html">Carnivore Foods</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown d-none">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
