--- a/food-list.html
+++ b/food-list.html
@@ -64,7 +64,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
               </li>
-              <li class="nav-item dropdown d-none">
+              <!-- <li class="nav-item dropdown d-none">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -109,7 +109,7 @@
                     >
                   </li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
