--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
               </li>
-              <li class="nav-item dropdown d-none">
+              <!-- <li class="nav-item dropdown d-none">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -117,7 +117,7 @@
                     >
                   </li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
