--- a/food-list.html
+++ b/food-list.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="canonical"
+      href="https://carnivore-diet.netlify.app/food-list.html"
+    />
     <title>Carnivore Food List</title>
     <meta
       name="description"
