--- a/food-list.html
+++ b/food-list.html
@@ -8,7 +8,7 @@
       rel="canonical"
       href="https://carnivore-diet.netlify.app/food-list.html"
     />
-    <title>Carnivore Food List</title>
+    <title>Free Carnivore Food List</title>
     <meta
       name="description"
       content="This is the list of carnivore-friendly food including meat, seafood, fats, snacks, and essential electrolytes and spices."
