--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="canonical" href="https://carnivore-diet.netlify.app/" />
-    <title>TDEE Calculator</title>
+    <title>Free Carnivore TDEE Calculator</title>
     <meta
       name="description"
       content="Calculate your optimal protein and fat intake with our Carnivore Diet Calculator. Ensure you're meeting nutritional needs for a healthy carnivore lifestyle."
