--- a/food-list.html
+++ b/food-list.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="canonical"
-      href="https://carnivore-diet.netlify.app/food-list.html"
-    />
+    <link rel="canonical" href="food-list.html" />
     <title>Free Carnivore Food List</title>
     <meta
       name="description"
@@ -60,13 +57,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/">Carnivore Calculator</a>
+                <a class="nav-link" href="index.html">Carnivore Calculator</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/food-list.html">Carnivore Foods</a>
+                <a class="nav-link" href="food-list.html">Carnivore Foods</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/meal-planner.html">Meal Planner</a>
+                <a class="nav-link" href="meal-planner.html">Meal Planner</a>
               </li>
               <!-- <li class="nav-item dropdown d-none">
                 <a
