--- a/food-list.html
+++ b/food-list.html
@@ -65,6 +65,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="meal-planner.html">Meal Planner</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="resources.html">Resources</a>
+              </li>
               <!-- <li class="nav-item dropdown d-none">
                 <a
                   class="nav-link dropdown-toggle"
