--- a/resources.html
+++ b/resources.html
@@ -221,6 +221,13 @@
             >Go Carnivore</a
           >
         </li>
+        <li class="list-group-item">
+          <a
+            href="https://www.facebook.com/groups/worldcarnivoretribe/"
+            target="_blank"
+            >Facebook Groups</a
+          >
+        </li>
       </ul>
     </div>
 
