--- a/resources.html
+++ b/resources.html
@@ -213,7 +213,9 @@
       <h2 class="mt-3">Free Carnivore Communities</h2>
       <p>
         Unfortunately nothing comes free, these days. Only 1 option I found
-        which was decent enough to have free/paid stuff.
+        which was decent enough to have free/paid stuff. While facebook groups
+        have more members, they are not helpful for troubleshooting carnivore
+        issues.
       </p>
       <ul class="list-group mb-5">
         <li class="list-group-item">
