--- a/resources.html
+++ b/resources.html
@@ -8,7 +8,7 @@
     <title>Free Carnivore Resources</title>
     <meta
       name="description"
-      content="All Carnivore resources you need in one place."
+      content="All the free Carnivore resources you need in one place! This list helped me to transit to Carnivore lifestyle for free."
     />
     <!-- Google tag (gtag.js) -->
     <script
