--- a/food-list.html
+++ b/food-list.html
@@ -227,6 +227,47 @@
             </tbody>
           </table>
         </div>
+        <h2>What to Eat for Carnivore Breakfast, Lunch, and Dinner</h2>
+        <p>
+          You can eat anything you like from the Carnivore-friendly menu,
+          meaning animal-based foods, including meat, poultry, seafood, eggs,
+          and dairy (if your Carnivore version allows) based on your
+          macronutrient ratio and caloric needs.
+        </p>
+        <h3>Breakfast</h3>
+
+        <p>
+          You can start the day with high-fat, moderate-protein foods because
+          these foods give you energy for the whole day and keep you full
+          longer, helping you reduce caloric intake. Try eggs, bacon, sausage,
+          or even steak cooked in butter or tallow.
+        </p>
+        <p>
+          If you’re not a big breakfast person, you can skip it or go for a cup
+          of bone broth to ease into the day.
+        </p>
+        <h3>Lunch</h3>
+        <p>
+          Your midday food should be big enough to keep you going but not too
+          heavy that it slows you down. A fatty cut of meat like ribeye, ground
+          beef, pork belly, or salmon is perfect. If you need something quick,
+          burger patties, sardines, or leftover steak can work great, too.
+        </p>
+        <h3>Dinner</h3>
+        <p>
+          The evening meal is usually when people go for bigger, richer meals
+          since there’s time to relax and digest—only if you eat in the early
+          evening, not late at night. This is the perfect time for slow-cooked
+          meats like short ribs, oxtail, or a roasted chicken thigh with crispy
+          skin. Some people also enjoy bone marrow or liver for extra nutrients
+          before calling it a night.
+        </p>
+        <p>
+          You just need to stick to fatty meats and eat when you’re hungry. Your
+          body will adapt and go on. That’s it! Simple, filling, and full of the
+          right macros. Set portion sizes based on your calorie needs, and give
+          the calculator a go to see what works for you!
+        </p>
       </div>
     </div>
     <script
