--- a/index.html
+++ b/index.html
@@ -304,6 +304,31 @@
               </p>
             </div>
             <div class="chart" id="bmiChart"></div>
+
+            <div class="alert alert-light">
+              <ul>
+                <li>
+                  <b>Protein:</b> About 15-25% of your intake should come from
+                  high-quality protein sources to repair muscles and feel full.
+                </li>
+                <li>
+                  <b>Fat:</b> About 70-85% of your daily calories should come
+                  from fat, your main energy source. Think ribeye steaks,
+                  butter, eggs, and fatty fish.
+                </li>
+                <li>
+                  <b>Carbohydrates:</b> Pretty much nonexistent. The goal is
+                  0-5%, which happens naturally when you cut out plants and
+                  stick to animal-based foods.
+                </li>
+              </ul>
+              <p>
+                Some people tweak these ratios depending on their goals—more fat
+                for energy and ketosis or slightly higher protein for
+                muscle-building. But generally, remember this balance: high fat,
+                moderate protein, and almost zero carbohydrates
+              </p>
+            </div>
           </div>
         </div>
       </div>
