--- a/food-list.html
+++ b/food-list.html
@@ -227,6 +227,9 @@
             </tbody>
           </table>
         </div>
+        <!-- ShareThis BEGIN -->
+        <div class="sharethis-inline-share-buttons my-5"></div>
+        <!-- ShareThis END -->
         <h2>What to Eat for Carnivore Breakfast, Lunch, and Dinner</h2>
         <p>
           You can eat anything you like from the Carnivore-friendly menu,
