--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
         calculating Basal Metabolic Rate (BMR), which represents the number of
         calories your body requires at rest to maintain vital functions.
       </p>
-
+      <!-- ShareThis BEGIN -->
+      <div class="sharethis-inline-share-buttons my-5"></div>
+      <!-- ShareThis END -->
       <div class="alert alert-warning" role="alert">
         <b>Disclaimer:</b> The results from this tool provide a general guide
         and should not be taken as medical advice. Consult with a
@@ -332,6 +334,9 @@
           </div>
         </div>
       </div>
+      <!-- ShareThis BEGIN -->
+      <div class="sharethis-inline-share-buttons"></div>
+      <!-- ShareThis END -->
     </div>
 
     <script type="text/javascript" src="scripts/calculate.js"></script>
@@ -341,8 +346,5 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <!-- ShareThis BEGIN -->
-    <div class="sharethis-inline-share-buttons"></div>
-    <!-- ShareThis END -->
   </body>
 </html>
