--- a/meal-planner.html
+++ b/meal-planner.html
@@ -143,6 +143,9 @@
         >
         before making any significant lifestyle changes.
       </div>
+      <!-- ShareThis BEGIN -->
+      <div class="sharethis-inline-share-buttons my-5"></div>
+      <!-- ShareThis END -->
       <div class="row gy-4">
         <div class="col-md-6">
           <div class="row">
@@ -200,6 +203,9 @@
           </div>
         </div>
       </div>
+      <!-- ShareThis BEGIN -->
+      <div class="sharethis-inline-share-buttons"></div>
+      <!-- ShareThis END -->
     </div>
 
     <script type="text/javascript" src="scripts/mealplan.js"></script>
@@ -208,8 +214,5 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <!-- ShareThis BEGIN -->
-    <div class="sharethis-inline-share-buttons"></div>
-    <!-- ShareThis END -->
   </body>
 </html>
