--- a/resources.html
+++ b/resources.html
@@ -79,6 +79,9 @@
       </nav>
 
       <h1>Free Carnivore Guides/Resources</h1>
+      <!-- ShareThis BEGIN -->
+      <div class="sharethis-inline-share-buttons my-5"></div>
+      <!-- ShareThis END -->
       <p>
         I found these free guides and resources very helpful in my carnivore
         journey. To add your resources, please contact me
@@ -231,6 +234,9 @@
           >
         </li>
       </ul>
+      <!-- ShareThis BEGIN -->
+      <div class="sharethis-inline-share-buttons"></div>
+      <!-- ShareThis END -->
     </div>
 
     <script
@@ -238,8 +244,5 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <!-- ShareThis BEGIN -->
-    <div class="sharethis-inline-share-buttons"></div>
-    <!-- ShareThis END -->
   </body>
 </html>
