--- a/food-list.html
+++ b/food-list.html
@@ -40,7 +40,7 @@
     <!-- ShareThis -->
   </head>
   <body>
-    <div class="container">
+    <div class="container mb-5">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <button
@@ -272,14 +272,14 @@
           the calculator a go to see what works for you!
         </p>
       </div>
+      <!-- ShareThis BEGIN -->
+      <div class="sharethis-inline-share-buttons"></div>
+      <!-- ShareThis END -->
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <!-- ShareThis BEGIN -->
-    <div class="sharethis-inline-share-buttons"></div>
-    <!-- ShareThis END -->
   </body>
 </html>
