--- a/meal-planner.html
+++ b/meal-planner.html
@@ -48,7 +48,7 @@
     <!-- ShareThis -->
   </head>
   <body>
-    <div class="container">
+    <div class="container mb-5">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <button
@@ -202,10 +202,10 @@
             </p>
           </div>
         </div>
+        <!-- ShareThis BEGIN -->
+        <div class="sharethis-inline-share-buttons"></div>
+        <!-- ShareThis END -->
       </div>
-      <!-- ShareThis BEGIN -->
-      <div class="sharethis-inline-share-buttons"></div>
-      <!-- ShareThis END -->
     </div>
 
     <script type="text/javascript" src="scripts/mealplan.js"></script>
