--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/apple-touch-icon.png"
+      href="assets/favicon/calc/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon-32x32.png"
+      href="assets/favicon/calc/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon-16x16.png"
+      href="assets/favicon/calc/favicon-16x16.png"
     />
-    <link rel="manifest" href="assets/site.webmanifest" />
+    <link rel="manifest" href="assets/favicon/calc/site.webmanifest" />
     <title>Free Carnivore TDEE Calculator</title>
     <meta
       name="description"
