--- a/resources.html
+++ b/resources.html
@@ -252,6 +252,46 @@
           >
         </li>
       </ul>
+
+      <h2 class="mt-3">Carnivore Approved Products</h2>
+      <p>
+        These are the Best Carnivore-approved essentials for your new Carnivore
+        lifestyle!
+      </p>
+      <ul class="list-group mb-5">
+        <li class="list-group-item">
+          <a href="http://elementallabs.refr.cc/gocarnivore" target="_blank"
+            >LMNT Electrolytes</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a
+            href="https://the-carnivore-bar.myshopify.com/gocarnivore"
+            target="_blank"
+            >Carnivore Bars</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="https://shop.theprimal.com/" target="_blank"
+            >The Primal Tallow Balms & Soaps</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="https://amzn.to/3J643qq" target="_blank"
+            >Redmond Real Salt</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="https://www.jcrowsllc.com/?aff=1097" target="_blank"
+            >Lugol's Iodine</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a href="https://amzn.to/3TITFtJ" target="_blank"
+            >Equip Supplements</a
+          >
+        </li>
+      </ul>
       <!-- ShareThis BEGIN -->
       <div class="sharethis-inline-share-buttons"></div>
       <!-- ShareThis END -->
