--- a/resources.html
+++ b/resources.html
@@ -302,5 +302,13 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <div class="text-center my-5 text-muted">
+      This tool is inspired by the
+      <a
+        href="https://v0-carnivore-macro-calculator.vercel.app/"
+        target="_blank"
+        >Free Carnivore Starter Toolkit</a
+      >
+    </div>
   </body>
 </html>
