--- a/index.html
+++ b/index.html
@@ -366,9 +366,7 @@
     ></script>
     <div class="text-center my-5 text-muted">
       This tool is inspired by the
-      <a
-        href="https://v0-carnivore-macro-calculator.vercel.app/"
-        target="_blank"
+      <a href="https://carnivore-guide.vercel.app/" target="_blank"
         >Free Carnivore Starter Toolkit</a
       >
     </div>
